# proyectofinal_graficas

./: README.md
sistema-solar-final/sistema-solar-final/: Cargo.toml  README.md
sistema-solar-final/sistema-solar-final/src/: lib.rs  main.rs
sistema-solar-final/sistema-solar-final/src/camera/: mod.rs
sistema-solar-final/sistema-solar-final/src/input/: mod.rs
sistema-solar-final/sistema-solar-final/src/physics/: collision.rs  mod.rs
sistema-solar-final/sistema-solar-final/src/render/: mod.rs  shader.wgsl  uniforms.rs
sistema-solar-final/sistema-solar-final/src/scene/: celestial_body.rs  mod.rs  orbital_system.rs  skybox.rs  spaceship.rs
sistema-solar-final/sistema-solar-final/src/utils/: geometry.rs  mod.rs
space/: Cargo.toml
space/src/: main.rs
